# rtos_sim

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
FreeRTOS-Kernel/portable/: CMakeLists.txt
config/: FreeRTOSConfig.h
config/common/Trace_Recorder_Configuration/: trcConfig.h
platform/windows_support/: Run-time-stats-utils.c  code_coverage_additions.c
source/: console.c  main.c  main_blinky.c  main_full.c  tick_timing_test.c  tick_timing_test.h
